# dviglo_01

./: CMakeLists.txt  README.md
cmake/: dviglo_utils.cmake
doc/: соглашения.md  структура исходников.md
libs/: CMakeLists.txt
libs/dviglo/: CMakeLists.txt
libs/dviglo/000_base_01/: CMakeLists.txt
libs/dviglo/000_base_01/src/: base.cppm  math.cppm  primitive_types.cppm
libs/dviglo/001_freetype_utils_01/: CMakeLists.txt
libs/dviglo/001_freetype_utils_01/src/: freetype_utils.cppm
libs/dviglo/001_log_01/: CMakeLists.txt
libs/dviglo/001_log_01/src/: log.cppm
libs/dviglo/002_image_01/: CMakeLists.txt
libs/dviglo/002_image_01/src/: image.cppm
libs/dviglo/002_std_utils_01/: CMakeLists.txt
libs/dviglo/002_std_utils_01/docs/: utf-8.md  заметки.md  инфо.md
libs/dviglo/002_std_utils_01/src/: array_2d.cppm  file.cppm  path.cppm  scope_guard.cppm  std_string_utils.cppm  std_vector_utils.cppm
libs/dviglo/003_gl_utils_01/: CMakeLists.txt
libs/dviglo/003_gl_utils_01/src/: force_discrete_gpu.cpp  shader_program.cppm  texture.cppm
libs/dviglo/003_localization_01/: CMakeLists.txt
libs/dviglo/003_localization_01/src/: localization.cppm
libs/dviglo/003_sdl_utils_01/: CMakeLists.txt
libs/dviglo/003_sdl_utils_01/src/: sdl_utils.cppm  time.cppm
libs/dviglo/004_sprite_batch_01/: CMakeLists.txt
libs/dviglo/004_sprite_batch_01/docs/: fill_line.md  соглашения.md
libs/dviglo/004_sprite_batch_01/docs/src/: fill_line.odg
libs/dviglo/004_sprite_batch_01/src/: shaders.inl  sprite_batch.cppm  sprite_font.cppm
libs/test/: force_assert.h  main.cpp  std_string_utils.cppm
samples/01_hello_sdl/: CMakeLists.txt  main.cpp
samples/20_imgui/: CMakeLists.txt
samples/60_sprite_batch_benchmark/: CMakeLists.txt  app.cppm
samples/60_sprite_batch_benchmark/60_data/fonts/: ubuntu-r_18_simple.fnt  ubuntu-r_18_simple_blurred.fnt
samples/70_game/: CMakeLists.txt  app.cppm  camera.cppm  config.cppm  consts.cppm  main.cpp  sprite_batch.cppm  sprite_font.cppm
samples/70_game/70_data/: strings.json
samples/70_game/70_data/fonts/: ubuntu-b-30-outlined.fnt
samples/70_game/70_data/shaders/: basic.frag  sprite_batch_sprites.frag  sprite_batch_sprites.geom  sprite_batch_sprites.vert  sprite_batch_triangles.vert  textured.frag  textured2.frag
samples/80_q1k3/docs/: инфо.md
samples/80_q1k3/src/: CMakeLists.txt  main.cpp
tools/bitmap_font_generator/: CMakeLists.txt  app.cppm  generator.cppm  glyph_renderer.cppm  main.cpp  rendered_glyph.cppm
tools/bitmap_font_generator/bitmap_font_generator_data/: strings.json
tools/sprite_batch_benchmark/: CMakeLists.txt  app.cppm  main.cpp
tools/test/: CMakeLists.txt  force_assert.h  main.cpp  std_string_utils.cppm
tutorials/: CMakeLists.txt
tutorials/pathfinding/: CMakeLists.txt  main.cpp
